--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="header-nav">
           <a class="header-nav-logo" href="./index.html"
@@ -54,7 +54,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="hero">
         <div class="container">
@@ -118,7 +118,7 @@
         </div>
       </section>
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-people">
@@ -356,10 +356,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/BankingApp.jpg"
                   alt="Banking App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -375,10 +374,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -394,10 +392,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/MeditationApp.jpg"
                   alt="Meditation App"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -413,10 +410,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/TaxiService.jpg"
                   alt="Taxi Service"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -432,10 +428,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/ScreenIllustrations.jpg"
                   alt="Screen Illustrations"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -451,10 +446,9 @@
             <li class="portfolio-item">
               <div class="thumb">
                 <img
+                  class="portfolio-img"
                   src="./images/OnlineCourses.jpg"
                   alt="OnlineCourses"
-                  width="360"
-                  height="300"
                 />
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -474,15 +468,17 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-container">
-          <a class="footer-logo" href="./index.html" target="_self"
-            >Web<span class="span">Studio</span></a
-          >
+          <div class="footer-logo-mob">
+            <a class="footer-logo" href="./index.html" target="_self"
+              >Web<span class="span">Studio</span></a
+            >
+          </div>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="social-list">
           <p class="social-text">Social media</p>
           <ul class="footer-list">
             <li class="footer-item">
