no modal mobile

--- a/index.html
+++ b/index.html
@@ -20,41 +20,53 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <header class="header">
-      <div class="container">
-        <nav class="header-nav">
-          <a class="header-nav-logo" href="./index.html"
-            >Web<span class="header-nav-logo-web">Studio</span></a
-          >
+    <header class="header">
+      <div class="tab-norm-header">
+        <div class="container header-container">
+          <nav class="header-nav">
+            <a class="header-nav-logo" href="./index.html"
+              >Web<span class="header-nav-logo-web">Studio</span></a
+            >
 
-          <ul class="header-list">
-            <li class="header-item">
-              <a class="header-link current" href="./index.html">Studio</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="">Portfolio</a>
-            </li>
-            <li class="header-item">
-              <a class="header-link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="adress">
-          <ul class="adress-list">
-            <li class="header-adress-item">
-              <a class="header-adress-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="header-adress-item">
-              <a class="header-adress-link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              ><br />
-            </li>
-          </ul>
-        </address>
+            <ul class="header-list">
+              <li class="header-item">
+                <a class="header-link current" href="./index.html">Studio</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link" href="">Portfolio</a>
+              </li>
+              <li class="header-item">
+                <a class="header-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="adress">
+            <ul class="adress-list">
+              <li class="header-adress-item header-adress-item-mail">
+                <a class="header-adress-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="header-adress-item">
+                <a class="header-adress-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                ><br />
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
-    </header> -->
+      <div class="header-mob">
+        <a class="header-nav-mob" href="./index.html"
+          >Web<span class="header-nav-logo-mob">Studio</span></a
+        >
+        <button type="button" class="menu-open-btn">
+          <svg class="menu-btn-icon" height="24" width="24">
+            <use href="./images/icons.svg#icon-header"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
     <main>
       <section class="hero">
         <div class="container">
@@ -549,6 +561,7 @@
         </div>
       </div>
     </footer>
+    <div class="container footer-mob"></div>
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-button">
