--- a/index.html
+++ b/index.html
@@ -66,6 +66,93 @@
           </svg>
         </button>
       </div>
+      <div class="header-modal">
+        <!-- you can type "is-open" on the next line -->
+        <div class="backdrop-mob is-open">
+          <div class="modal-mob">
+            <button type="button" class="modal-button">
+              <svg class="modal-button-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-x-close"></use>
+              </svg>
+            </button>
+            <ul class="header-list-mob">
+              <li class="header-item-mob current-mob">
+                <a class="header-link-mob" href="./index.html">Studio</a>
+              </li>
+              <li class="header-item-mob">
+                <a class="header-link-mob" href="">Portfolio</a>
+              </li>
+              <li class="header-item-mob">
+                <a class="header-link-mob" href="">Contacts</a>
+              </li>
+            </ul>
+            <address class="adress-mob">
+              <ul class="adress-list-mob">
+                <li class="header-adress-item-mob">
+                  <a
+                    class="header-adress-link-mob header-adress-item-phone-mob"
+                    href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  ><br />
+                </li>
+                <li class="header-adress-item-mob header-adress-item-mail-mob">
+                  <a
+                    class="header-adress-link-mob"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="header-list-social">
+              <li class="header-item-social">
+                <a
+                  class="header-link-social"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                >
+                  <svg class="header-icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header-item-social">
+                <a
+                  class="header-link-social"
+                  href="https://twitter.com/"
+                  target="_blank"
+                >
+                  <svg class="header-icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header-item-social">
+                <a
+                  class="header-link-social"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                >
+                  <svg class="header-icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header-item-social">
+                <a
+                  class="header-link-social"
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                >
+                  <svg class="header-icon-social" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
       <section class="hero">
