--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="header-modal">
         <!-- you can type "is-open" on the next line -->
-        <div class="backdrop-mob is-open">
+        <div class="backdrop-mob">
           <div class="modal-mob">
             <button type="button" class="modal-button">
               <svg class="modal-button-icon" width="8" height="8">
