--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
           <ul class="team-list">
             <li class="team-people">
               <img
+                srcset="./images/MarkGuerrero.jpg 1x, ./images/team-card-2x 2x"
                 src="./images/MarkGuerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -279,7 +280,12 @@
             </li>
 
             <li class="team-people">
-              <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="./images/TomFord.jpg 1x, ./images/team-card-2-2x 2x"
+                src="./images/TomFord.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
               <div class="con-team-person">
                 <h3 class="team-person">Tom Ford</h3>
                 <p class="team-person-job">Frontend Developer</p>
@@ -333,6 +339,10 @@
             </li>
             <li class="team-people">
               <img
+                srcset="
+                  ./images/CamilaGarcia.jpg 1x,
+                  ./images/team-card-3-2x   2x
+                "
                 src="./images/CamilaGarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -390,6 +400,10 @@
             </li>
             <li class="team-people">
               <img
+                srcset="
+                  ./images/DanielWilson.jpg 1x,
+                  ./images/team-card-4-2x   2x
+                "
                 src="./images/DanielWilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -456,6 +470,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    ./images/BankingApp.jpg    1x,
+                    ./images/portfolio-card-2x 2x
+                  "
                   src="./images/BankingApp.jpg"
                   alt="Banking App"
                 />
@@ -474,6 +492,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    ./images/CashlessPayment.jpg 1x,
+                    ./images/portfolio-card-2-2x 2x
+                  "
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
                 />
@@ -492,6 +514,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    /images/MeditationApp.jpg   1x,
+                    /images/portfolio-card-3-2x 2x
+                  "
                   src="./images/MeditationApp.jpg"
                   alt="Meditation App"
                 />
@@ -510,6 +536,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    ./images/TaxiService.jpg     1x,
+                    ./images/portfolio-card-4-2x 2x
+                  "
                   src="./images/TaxiService.jpg"
                   alt="Taxi Service"
                 />
@@ -528,6 +558,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    ./images/ScreenIllustrations.jpg 1x,
+                    ./images/portfolio-card-5-2x     2x
+                  "
                   src="./images/ScreenIllustrations.jpg"
                   alt="Screen Illustrations"
                 />
@@ -546,6 +580,10 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
+                  srcset="
+                    ./images/OnlineCourses.jpg   1x,
+                    ./images/portfolio-card-6-2x 2x
+                  "
                   src="./images/OnlineCourses.jpg"
                   alt="OnlineCourses"
                 />
