--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                 <img
                   class="portfolio-img"
                   srcset="
-                    /images/MeditationApp.jpg   1x,
-                    /images/portfolio-card-3-2x 2x
+                    ./images/MeditationApp.jpg   1x,
+                    ./images/portfolio-card-3-2x 2x
                   "
                   src="./images/MeditationApp.jpg"
                   alt="Meditation App"
