--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <ul class="team-list">
             <li class="team-people">
               <img
-                srcset="./images/MarkGuerrero.jpg 1x, ./images/team-card-2x 2x"
+                srcset="./images/team-card-2x.jpg 2x"
                 src="./images/MarkGuerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -281,7 +281,7 @@
 
             <li class="team-people">
               <img
-                srcset="./images/TomFord.jpg 1x, ./images/team-card-2-2x 2x"
+                srcset="./images/team-card-2-2x.jpg 2x"
                 src="./images/TomFord.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -339,10 +339,7 @@
             </li>
             <li class="team-people">
               <img
-                srcset="
-                  ./images/CamilaGarcia.jpg 1x,
-                  ./images/team-card-3-2x   2x
-                "
+                srcset="./images/team-card-3-2x.jpg 2x"
                 src="./images/CamilaGarcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -400,10 +397,7 @@
             </li>
             <li class="team-people">
               <img
-                srcset="
-                  ./images/DanielWilson.jpg 1x,
-                  ./images/team-card-4-2x   2x
-                "
+                srcset="./images/team-card-4-2x.jpg 2x"
                 src="./images/DanielWilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -471,8 +465,8 @@
                 <img
                   class="portfolio-img"
                   srcset="
-                    ./images/BankingApp.jpg    1x,
-                    ./images/portfolio-card-2x 2x
+                    ./images/BankingApp.jpg        1x,
+                    ./images/portfolio-card-2x.jpg 2x
                   "
                   src="./images/BankingApp.jpg"
                   alt="Banking App"
@@ -493,8 +487,8 @@
                 <img
                   class="portfolio-img"
                   srcset="
-                    ./images/CashlessPayment.jpg 1x,
-                    ./images/portfolio-card-2-2x 2x
+                    ./images/CashlessPayment.jpg     1x,
+                    ./images/portfolio-card-2-2x.jpg 2x
                   "
                   src="./images/CashlessPayment.jpg"
                   alt="Cashless Payment"
@@ -514,10 +508,7 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
-                  srcset="
-                    ./images/MeditationApp.jpg   1x,
-                    ./images/portfolio-card-3-2x 2x
-                  "
+                  srcset="./images/portfolio-card-3-2x.jpg 2x"
                   src="./images/MeditationApp.jpg"
                   alt="Meditation App"
                 />
@@ -536,11 +527,8 @@
               <div class="thumb">
                 <img
                   class="portfolio-img"
-                  srcset="
-                    ./images/TaxiService.jpg     1x,
-                    ./images/portfolio-card-4-2x 2x
-                  "
-                  src="./images/TaxiService.jpg"
+                  srcset="./images/taxi.jpg 1x, ./images/taxi-2x.jpg 2x"
+                  src="./images/taxi.jpg"
                   alt="Taxi Service"
                 />
                 <p class="overlay">
@@ -560,7 +548,7 @@
                   class="portfolio-img"
                   srcset="
                     ./images/ScreenIllustrations.jpg 1x,
-                    ./images/portfolio-card-5-2x     2x
+                    ./images/portfolio-card-5-2x.jpg 2x
                   "
                   src="./images/ScreenIllustrations.jpg"
                   alt="Screen Illustrations"
@@ -581,8 +569,8 @@
                 <img
                   class="portfolio-img"
                   srcset="
-                    ./images/OnlineCourses.jpg   1x,
-                    ./images/portfolio-card-6-2x 2x
+                    ./images/OnlineCourses.jpg       1x,
+                    ./images/portfolio-card-6-2x.jpg 2x
                   "
                   src="./images/OnlineCourses.jpg"
                   alt="OnlineCourses"
